Update user guide and YAML specification to reflect recent changes, including adjustments to section headers and examples for improved clarity. Revised descriptions to ensure consistency with the latest versioning and features.

--- a/quarto-book/yrxlsim.qmd
+++ b/quarto-book/yrxlsim.qmd
@@ -290,4 +290,4 @@ cells:
 
 ---
 
-You can open this project in RStudio and use **Build** → **Render Book** to generate the HTML. The rendered book will show all YAML blocks above as Excel-like tables.
+You can open this project in RStudio and use **Build** → **Render Book** to generate the HTML. The rendered book shows the original YAML source above each Excel-like spreadsheet preview (one code block per example — no repetition).
