--- a/quarto-book/index.qmd
+++ b/quarto-book/index.qmd
@@ -11,10 +11,10 @@ This sample Quarto book shows how to embed **yrXlsim** YAML in a document. Any f
 In your `.qmd` file, write a code block and add the `yrxlsim` class. The block below is a live example — it is rendered by JavaScript into the table you see:
 
 ```{.yrxlsim}
-version: "0.0.1"
+version: "0.0.2"
 rows:
   - ["Label", "Value"]
   - ["Total", "=A2*2"]
 ```
 
-The source for that table is the YAML above (in a block with class `yrxlsim`). The YAML must follow the [yrXlsim sheet format](https://github.com/...) (see YAML-SPEC.md). The next chapter shows more examples.
+The source for that table is the YAML above (in a block with class `yrxlsim`). The YAML must follow the [yrXlsim sheet format](https://github.com/...) (see YAML-SPEC-v0.0.2.md). The next chapter shows more examples.
